(2000/10/02 - salz) -i now accepts '-' for a list of files from stdio
(2000/09/19 - brent) fixed -R to handle similarly named files
(2000/05/31 - mascott) ncurses.h gets picked up correctly for FreeBSD
(2000/05/18 - hops) display errors via varargs posterr(ap, ..)
                    start changing sprintfs to snprintfs
                    buildonly not go into curses - set linemode 
                        - fixes buildonly coredump
                    explicitly initialise some booleans in main.c
                    handle error messages nicely - curses msgline2 line 
                    or stdout - using snprintf+posterr(buf). 
                    Clear msg2 line  on ^L command.c.
                    Support BS in getline()  input.c.
                    Add build support for contrib dir.
(2000/05/18 - broeker) move declarations of invlib.c functions to invlib.h,
                       from global.h
(2000/05/18 - broeker) it's 'myylineno', not 'yylineno'
(2000/05/18 - broeker) don't #include <config.h>, but "config.h" --
                       it's not a system header file, after all.
(2000/05/18 - broeker) don't #include "global.h" from egrep.y -- the
                       extern declaration for yylex() only confuses
                       it, and it doesn't need most of "global.h",
                       anyway.
(2000/05/18 - broeker) no more 'extern' declaration in .c files -- they
                       belong into the headers. For now, most of them move to
                       "global.h".
(2000/05/18 - broeker) don't cast function pointers -- make all the
                       find*() function follow the same prototype,
                       instead. This affects their definitions, too.
(2000/05/17 - sharpe) progress bar, tab between line selection and option,
                      new support for more than nine line selections
(2000/05/15 - petr) version 15.0bl3 now, spec file change
(2000/05/10 - klausner) NetBSD current support